# mcp-pyrefly-autotype

./: .gitignore  LICENSE  README.md  example_untyped.py  pyproject.toml  pyrefly.toml  simple_untyped.py  test_demo.py  test_direct.py
sample_queries/: LargeUntypedCodebase.md  PromptWithTools.md
src/mcp_pyrefly_autotype/: server.py
tests/: __init__.py  test_demo.py  test_direct.py  test_large_file.py  test_server.py
