[project]
name = "mcp-pyrefly-autotype"
version = "0.1.0"
description = "MCP server for automatic Python type inference and checking using Pyrefly"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12.3",
    "typing-extensions>=4.8.0",
    "pyrefly>=0.26.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
[[project.authors]]
name = "Aaron Pollack"
email = "poilackaaron@gmail.com"

[build-system]
requires = [ "uv_build>=0.8.0,<0.9",]
build-backend = "uv_build"

[project.scripts]
mcp-pyrefly-autotype = "mcp_pyrefly_autotype:main"
